style: 优化部分代码格式